# forma-site-design-extension-template-rust

./: .gitignore  Cargo.toml  build.sh  cargo-generate.toml  package-lock.json  package.json  vite.config.js
src/: lib.rs
web/: index.html
web/src/: main.js  style.css
